<resources>
    <string name="app_name">KKWallet</string>
    <string name="home_rb_property">资产</string>
    <string name="home_rb_my">我的</string>
    <string name="load_loading">加载中...</string>
    <string name="create_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="app_title">KKWallet</string>
    <string name="init_wallet_desc_1">你的私人钱包</string>
    <string name="init_wallet_desc_2">多钱包资产集合 一目了然</string>
    <string name="init_wallet_desc_3">助记词备份防丢 多重签名防盗</string>
    <string name="create_wallet_hint">· 密码用于保护私钥和交易权，强度非常重要\n· KKWallet 不存储密码，也无法帮您找回，请务必牢记</string>
    <string name="create_wallet_et_name_hint">钱包名称</string>
    <string name="create_wallet_et_pwd_hint">密码 (至少需要8位)</string>
    <string name="create_wallet_et_pwd2_hint">重复密码</string>
    <string name="create_wallet_et_pwd_hint_message">密码提示信息 (可不填)</string>
    <string name="create_wallet_clause">服务及隐私条款</string>
    <string name="confirm">确定</string>
    <string name="pwd_strong">强</string>
    <string name="pwd_medium">中</string>
    <string name="pwd_weak">弱</string>
    <string name="back_up_wallet">备份钱包</string>
    <string name="back_up_desc_content">备份钱包：导出"助记词"并抄写到安全的地方，千万 不要保存到网络上。然后尝试转入、转出小额资产就 开始使用。</string>
    <string name="back_up_title">建议立即备份您的钱包！</string>
    <string name="back_up_seed_word">备份助记词</string>
    <string name="back_up_seed_word_desc1">抄下你的钱包助记词</string>
    <string name="back_up_seed_word_desc2">助记词用于恢复钱包或重置钱包密码，将它准确的抄写在纸上，并存放在只有你知道的安全地方。</string>
    <string name="next">下一步</string>
    <string name="unable_screenshot">请勿截图</string>
    <string name="dialog_hint_unable_screen_shot">如果有人获取你的助记词将直接获取你的资产!\n请抄写助记词并存放在安全的地方</string>
    <string name="know">知道了</string>
    <string name="dialog_hint_seed_word">请保管好你的助记词，以防被盗</string>
    <string name="back_up_seed_word_checked_desc1">请确认你的钱包助记词</string>
    <string name="back_up_seed_word_checked_desc2">请按顺序点击助记词，以确认你的备份助记词正确</string>
    <string name="add_contacts">添加联系人</string>
    <string name="surname">姓</string>
    <string name="name">姓名</string>
    <string name="address">地址</string>
    <string name="memo">备注</string>
    <string name="shift_address">转入地址</string>
    <string name="share">分享</string>
    <string name="copy_address">复制地址</string>
    <string name="user_back">用户反馈</string>
    <string name="send">发送</string>
    <string name="user_back_hint_content">请简述您遇到的问题（注明手机型号和系统）或建议</string>
    <string name="user_back_hint_contact">手机/邮箱/QQ（选填）</string>
    <string name="in_create">正在创建...</string>
    <string name="seed_order_error">助记词顺序有误,请确认后重新选取!</string>
    <string name="manage_wallet">钱包管理</string>
    <string name="update_pwd">更改密码</string>
    <string name="finish">完成</string>
    <string name="create_pwd">当前密码</string>
    <string name="upa_pwd_hint">不少于8位字符密码</string>
    <string name="input_create_pwd">请输入当前密码</string>
    <string name="input_new_pwd">请输入新的密码</string>
    <string name="input_new_pwd_2">请重复输入新的密码</string>
    <string name="new_pwd_disaccord">两次密码输入不一致</string>
    <string name="create_pwd_error">当前密码错误</string>
    <string name="process_error">处理异常</string>
    <string name="update_success">修改成功</string>
    <string name="save">保存</string>
    <string name="pwd_hint">密码提示</string>
    <string name="wallet_name">钱包名</string>
    <string name="modify_pwd">修改密码</string>
    <string name="export_private_key">导出私钥</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="cancel">取消</string>
    <string name="input_pwd">请输入密码</string>
    <string name="copy">复制</string>
    <string name="private_warn">安全警告： \n私钥未经加密，导出存在风险</string>
    <string name="have_copy">已复制</string>
    <string name="private_key_clip_hint">私钥已复制到剪贴板!</string>
    <string name="pwd_error">密码错误</string>
    <string name="pwd_checking">密码验证...</string>
    <string name="delete_success">删除成功</string>
    <string name="seed_word">助记词</string>
    <string name="private_key">私钥</string>
    <string name="input_seed_word_hint">请输入助记词,用空格分隔单词!</string>
    <string name="read_consent">我已经仔细阅读并同意</string>
    <string name="input_hint_private_key">请输入明文私钥</string>
    <string name="hint_seed_key">请输入助记词</string>
    <string name="hinit_limit_wallet_name">钱包名至少需要2个字符!</string>
    <string name="hint_limit_pwd_length">密码需要至少需要8位!</string>
    <string name="hint_pwd_equals">两次输入密码不一致!</string>
    <string name="import_wallet_exist_hint">本地已存在该钱包,无法导入</string>
    <string name="create_error">创建失败!</string>
    <string name="in_import">导入中...</string>
    <string name="seed_key_error">助记词有误</string>
    <string name="private_key_error">私钥错误</string>
    <string name="import_error">导入失败</string>
    <string name="import_success">导入成功</string>
    <string name="me">我</string>
    <string name="message_center">消息中心</string>
    <string name="contacts">联系人</string>
    <string name="def_currency">默认货币</string>
    <string name="help_center">帮助中心</string>
    <string name="about_we">关于我们</string>
    <string name="receipt_address">收款人的钱包地址</string>
    <string name="all_out">全部转出</string>
    <string name="max_count">最大可转数量</string>
    <string name="transaction_memo">交易备注</string>
    <string name="out_count">转出数量</string>
    <string name="slow">慢</string>
    <string name="fast">快</string>
    <string name="high_option">高级选项</string>
    <string name="custom_gas_price">自定义Gas Price,建议设置1以上</string>
    <string name="custom_gas">自定义Gas</string>
    <string name="miner_cost">矿工费用</string>
    <string name="out">转出</string>
    <string name="add_success">添加成功</string>
    <string name="info_fill_complete">请把信息填写完整!</string>
    <string name="scanner_error">扫描失败!</string>
    <string name="input_amount">请输入数量!</string>
    <string name="empty_address">请填写收款人钱包地址</string>
    <string name="empty_amount">转出必须大于0</string>
    <string name="address_copy_clipboard">地址已复制到剪贴板</string>
    <string name="contact_empty">暂无联系人</string>
    <string name="add_keep_token">添加关注代币</string>
    <string name="add_token">转入代币</string>
    <string name="token_manage">代币管理</string>
    <string name="create_new_wallet">创建一个新钱包</string>
    <string name="my_wallet">我的钱包</string>
    <string name="individual">个</string>
    <string name="race">种</string>
    <string name="wallet">钱包</string>
    <string name="deal_record">交易记录</string>
    <string name="delete_contact">删除联系人</string>
    <string name="hint">提示</string>
    <string name="delete_contact_vice">您确定要删除此联系人?</string>
    <string name="update_pwd_hint">忘记密码？导入助记词或私钥可重置密码。</string>
    <string name="seed_work_error">助记词有误,助记词为12个单词组成,请用空格分隔!</string>
    <string name="private_key_error_64">私钥有误,私钥长度为64位!</string>
    <string name="custom_path">自定义路径</string>
    <string name="input_path">请填写路径</string>
    <string name="save_success">保存成功</string>
    <string name="input_wallet_name">请输入钱包名</string>
    <string name="seed_word_error">助记词单词有误!</string>
    <string name="no_fault_dec">免责声明</string>
    <string name="no_fault_dec_desc">请确保已备份钱包至安全的地方\nKKWallet不承担任何钱包丢失、被盗、忘记密码等产生的资产损失！</string>
    <string name="have_token">拥有代币</string>
    <string name="deal_finish">交易完成</string>
    <string name="dealing">交易进行中</string>
    <string name="deal_error">交易失败</string>
    <string name="deal">转出</string>
    <string name="current_token">当前代币</string>
    <string name="fanqiang_mode">防抢模式</string>
    <string name="baohu_mode">隔离模式</string>
    <string name="scanner">扫一扫</string>
    <string name="server_clause">服务及隐私条款</string>
    <string name="contact_we">联系我们</string>
    <string name="sending">发送中...</string>
    <string name="empty_contact_hint">请填写联系方式</string>
    <string name="empty_content_hint">请填写内容</string>
    <string name="thank_user_back">感谢您的反馈!</string>
    <string name="zi">字</string>
    <string name="shift_to">转入</string>
    <string name="cny">人民币</string>
    <string name="usd">美元</string>
    <string name="show_address_title">温馨提示</string>
    <string name="show_address_desc">只支持以太坊ERC20标准的代币转入\n不支持ETC、BTC、BCH等代币！转账之前确认清楚,误转将无法找回！</string>
    <string name="out_affirm">转账确认</string>
    <string name="get_data">获取数据...</string>
    <string name="address_error_hint">地址0x开头,总共42位</string>
    <string name="out_count_error">转出数量大于最大可用数量!</string>
    <string name="out_count_few">转出数量低于最低矿工费</string>
    <string name="eth_insufficient">ETH手续费不足!</string>
    <string name="input_gas_price">请输入gas price!</string>
    <string name="gas_price_zero">gas price 必须大于0</string>
    <string name="gas_price_suggest">建议 gas price 设置2以上</string>
    <string name="input_gas_limit">请填写gas limit!</string>
    <string name="gas_limit_hint">gas Limit 不能小于21000</string>
    <string name="suggest_greater">建议大于</string>
    <string name="qq_group">加入QQ群(609722295)</string>
    <string name="wallet_count_max">钱包数量已达到上限!</string>
    <string name="gl_mode_hint">开启隔离模式,将无法进行转账!</string>
    <string name="shamp_hint">开启防抢模式,启动APP会进入虚假资产界面,双击页面将退出该页面。</string>
    <string name="first_shamp_hint">此页面为虚假页面\n双击任意地方退出该页面!</string>
    <string name="out_from_address_equals">收款地址不能和发送方地址相同</string>
    <string name="empty_message">暂无消息</string>
    <string name="optioning">操作中...</string>
    <string name="sign_read">标记已读</string>
    <string name="sign_hint">确定全部设置为已读状态?</string>
    <string name="sign_success">标记成功</string>
    <string name="account_address">钱包地址</string>
    <string name="add_other_token">添加其他代币</string>
    <string name="search_token">搜索代币</string>
    <string name="add_token_hint">有余额代币自动显示,若没有,可手动添加</string>
    <string name="search_token_name">搜索代币名称</string>
    <string name="install_qq">请安装QQ</string>
    <string name="search_token_empty">找不到你想要的代币\n尝试跟我们联系\nsupport@wallet.vip</string>
    <string name="yet_add">已添加</string>
    <string name="add">添加</string>
    <string name="skip">跳过</string>
    <string name="un_back_up">未备份</string>
    <string name="back_up_seed_word_hint">您尚未备份助记词,为了保证财产不损失,建议备份!</string>
    <string name="protect">已保护</string>
    <string name="un_protect">未保护</string>
    <string name="total_amount">总资产</string>
    <string name="recently_deal_record">最近交易记录</string>
    <string name="we_char_id">微信客服</string>
    <string name="we_char_desc_1">方法一: 长按保存图片使用微信扫一扫</string>
    <string name="we_char_2">方法二:</string>
    <string name="we_char_desc_2">微信号打开微信添加朋友</string>
    <string name="we_char_id_copy_success">微信号已复制到粘贴板!</string>
    <string name="save_error">保存失败!</string>
    <string name="save_error_permission">保存失败,权限被禁止!</string>
    <string name="show_property">查看资产</string>
    <string name="back_private_key">备份私钥</string>
    <string name="setting">设置</string>
    <string name="fpc_copy_address">复制地址</string>
    <string name="pro_back_up_hint">请备份助记词!</string>
    <string name="delete">删除</string>
    <string name="updateing">更改中...</string>
    <string name="update_pwd_success">修改成功</string>
    <string name="create_success">创建成功!</string>
    <string name="input_content">请输入内容</string>
    <string name="must_2_str">至少需要2个字符</string>
    <string name="logo_out">注销钱包</string>
    <string name="logouting">正在注销...</string>
    <string name="log_out_success">注销成功</string>
    <string name="not_back_up">暂不备份</string>
    <string name="back_up">备份</string>
    <string name="copy_private_key">复制私钥</string>
    <string name="my_center">个人中心</string>
    <string name="set_pattern_pwd">设置手势密码</string>
    <string name="input_hand_pwd">请输入手势密码</string>
    <string name="set_pwd">设置密码</string>
    <string name="input_old_hand_pwd">请输入旧手势密码</string>
    <string name="set_hand_pwd">请设置您的手势密码</string>
    <string name="manage_card">管理卡包</string>
    <string name="export_seed_key">导出助记词</string>
    <string name="update_card_name">修改卡名</string>
    <string name="buy_info">购买信息</string>
    <string name="send_amount">发送额度</string>
    <string name="commit">提交</string>
    <string name="collection_address">收款地址</string>
    <string name="permission_manage">权限管理</string>
</resources>