<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_bg"
              android:orientation="vertical">

    <com.vip.wallet.widget.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        app:title="@string/back_up_seed_word"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/back_up_seed_word_desc1"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/s13"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/back_up_seed_word_desc2"
        android:textColor="@color/gray_text"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/fbusk_flow_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/fbusk_next"
        style="@style/button_style"
        android:layout_marginBottom="15dp"
        android:text="@string/next"/>
</LinearLayout>