<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_bg"
              android:orientation="vertical">

    <com.vip.wallet.widget.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:title="@string/back_up_seed_word"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/back_up_seed_word_checked_desc1"
        android:textColor="@color/black"
        android:textSize="@dimen/s13"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/back_up_seed_word_checked_desc2"
        android:textSize="@dimen/s14"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/fcsk_selected_seed"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_rec_imaginary_line"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/fcsk_unselected_seed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="30dp"
        android:background="@color/transparent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/fcsk_confirm"
        style="@style/button_style"
        android:text="@string/confirm"/>

</LinearLayout>