<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_bg"
              android:orientation="vertical">

    <com.vip.wallet.widget.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:title="@string/we_char_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_marginBottom="10dp"
            app:cardMaxElevation="10dp"
            app:cardElevation="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/wcia_image"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:scaleType="fitXY"
                android:src="@drawable/we_chat_qr_code"/>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/we_char_desc_1"
                android:textColor="@color/black"
                android:textSize="@dimen/s13"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/we_char_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/s13"/>

                <com.vip.wallet.widget.UnderlineTextView
                    android:id="@+id/wcia_copy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:text="@string/copy"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/s12"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/we_char_desc_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/s13"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>