<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/page_bg"
              android:orientation="vertical">

    <com.vip.wallet.widget.TitleBarView
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:title="@string/export_private_key"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="2dp"
            android:padding="12dp"
            android:text="@string/private_warn"
            android:textColor="@color/orange"
            android:textSize="@dimen/s14"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="12dp"
            android:src="@drawable/anquanjingao"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/fepk_tv_private_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/shape_rec_imaginary_line"
        android:lineSpacingExtra="8dp"
        android:paddingBottom="36dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="12dp"
        android:text="test"

        android:textColor="@color/black"
        android:textSize="@dimen/s14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/fepk_copy"
        style="@style/button_style"
        android:text="@string/copy_private_key"/>
</LinearLayout>